--- a/testfcam/testfcam-Info.plist
+++ b/testfcam/testfcam-Info.plist
@@ -26,7 +26,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.richi.hankyu</string>
+	<string>com.example.testcam</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
